samples/_failures_safe/1761082650_f5924c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24e43e36.c: In function ‘main’:
./samples/SAFE/__tmp_24e43e36.c:150:5: error: expected expression at end of input
  150 |     GraphOperation operations[] =
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_24e43e36.c:150:5: error: expected declaration or statement at end of input
